force-app/main/default/objects/RebateProgram/fields/PMC_CLM_RebateProgramOrder__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_RebateProgramOrder__c</fullName>
    <description>Number indicating the position within its group or sales agreement.</description>
    <label>Rebate Program Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>