force-app/main/default/objects/RebateProgram/fields/PMC_SS_Projected_Incentive__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Projected_Incentive__c</fullName>
    <label>Projected Incentive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>