force-app/main/default/objects/RebateProgram/fields/PMC_SS_SalesAgreement__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Sales Agreement</description>
    <label>Sales Agreement</label>
    <referenceTo>SalesAgreement</referenceTo>
    <relationshipLabel>Rebate Programs</relationshipLabel>
    <relationshipName>Rebate_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>