force-app/main/default/objects/RebateProgram/validationRules/PMC_SS_RestrictRebateProgramEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictRebateProgramEdit</fullName>
    <active>true</active>
    <description>This validation rule is used to restrict the user from editing or creating Rebate Program for Under Revision or Approved Sales Agreement.</description>
    <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT( ISCHANGED( PMC_CLM_RebateProgramOrder__c ) ),

OR(
AND(
NOT(
OR(
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Active&apos;) ,
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Activated&apos;)

),
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Inactive&apos;) ,
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;)

)
)
),
NOT(ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;)),
OR(
ISPICKVAL( PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Approved&apos;),
ISPICKVAL(PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c, &apos;Under Revision&apos;)
)
),
AND(
ISNEW(),
OR( ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Archived&apos;),
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;),
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;) )
)
),

OR((PRIORVALUE( PMC_SS_Projected_Incentive__c ) = PMC_SS_Projected_Incentive__c) ,ISBLANK(PMC_SS_Projected_Incentive__c))


)</errorConditionFormula>
    <errorMessage>Rebate Programs can’t be created/edited at this stage. Please Amend the Sales Agreement to make revisions to Rebate Programs.</errorMessage>
</ValidationRule>