force-app/main/default/objects/RebateProgram/validationRules/PMC_SS_RestrictUpdateOnInactiveRebPrg.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictUpdateOnInactiveRebPrg</fullName>
    <active>true</active>
    <description>This validation rule is used to restrict the user from editing or creating Rebate Program for Under Revision or Approved Sales Agreement.</description>
    <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
OR(
ISPICKVAL( PRIORVALUE(Status) , &apos;Inactive&apos;),
AND(
ISPICKVAL( Status, &apos;Inactive&apos;),
NOT(
OR( 
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Archived&apos;), 
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;), 
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;) )
)
)
)
)</errorConditionFormula>
    <errorMessage>Inactive Rebate Programs cannot be updated.</errorMessage>
</ValidationRule>