force-app/main/default/objects/RebateProgram/validationRules/PMC_SS_RestrictUpdateWhenStatusActive.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictUpdateWhenStatusActive</fullName>
    <active>true</active>
    <description>This validation rule is used to restrict the user from editing or creating Rebate Program when in Active status.</description>
    <errorConditionFormula>AND( 
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT( ISNULL(PMC_SS_SalesAgreement__c  ) ),
NOT( ISPICKVAL(PMC_SS_SalesAgreement__r.Status, &apos;Activated&apos;) ),
ISPICKVAL( Status , &apos;Active&apos;)
)</errorConditionFormula>
    <errorMessage>Cannot activate the Rebate Program until the Sales Agreement is Active</errorMessage>
</ValidationRule>