force-app/main/default/objects/RebateProgram/listViews/My_Activated_Rebates.listView-meta.xml
<ListView>
    <fullName>My_Activated_Rebates</fullName>
    <columns>Name</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Frequency</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>My Activated Rebates</label>
</ListView>